# puny-manager

./: README.md  pyproject.toml
puny/: cli.py  crypto.py  i18n.py  util.py  vault.py
puny_manager.egg-info/: PKG-INFO
