[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puny-manager"
version = "1.5.7"
description = "Puny Manager – minimal password manager"
requires-python = ">=3.10"
dependencies = [
    "cryptography",
]

[project.scripts]
puny-manager = "puny.cli:main"

